[package]
name = "ferrous-systems-rust-training"
version = "0.1.0"
authors = ["Yuriy Kulikov <yuriy.kulikov.87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["fizzbuzz", "redisish", "tcp-server", "tcp-client"]
default-members = ["fizzbuzz", "redisish", "tcp-server", "tcp-client"]
[dependencies]
