[package]
name = "tcp-client"
version = "0.1.0"
authors = ["Yuriy Kulikov <yuriy.kulikov.87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redisish = { path = "../redisish" }
crossterm = { version = "0.19" }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
itertools = "0.7.4"
